--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div class="imageContainer">
+        <img src="architecture-image1.jpg" alt="Architectural Image 1">
+    </div>
+	<table>
+		<tr>
+			 <td><img src="image1.jpg" alt="Image 1"></td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum venenatis, turpis ut ullamcorper varius, purus arcu tristique justo, nec laoreet leo metus sit amet odio.</td>
+            <td><img src="image2.jpg" alt="Image 2"></td>
+		</tr>
+		<tr>
+            <td><img src="image3.jpg" alt="Image 3"></td>
+            <td>Quisque cursus, lectus a facilisis interdum, eros turpis suscipit sapien, sit amet ultricies risus purus ac augue. Donec sagittis neque eu dolor fermentum, ut aliquet massa volutpat.</td>
+            <td><img src="image4.jpg" alt="Image 4"></td>
+        </tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
